crean inpage url

--- a/README.org
+++ b/README.org
@@ -17,33 +17,33 @@
 - [[#install][Install]]
 - [[#usage][Usage]]
 - [[#customize][Customize]]
-- [[https://github.com/conao3/leaf.el#syntaxes][Syntaxes]]
-- [[https://github.com/conao3/leaf.el#basic-keywords][Basic keywords]]
-  - [[https://github.com/conao3/leaf.el#none-keyword][none (keyword)]]
-  - [[https://github.com/conao3/leaf.el#require-keyword][:require keyword]]
-  - [[https://github.com/conao3/leaf.el#ensure-package-keywords][:ensure, :package keywords]]
-  - [[https://github.com/conao3/leaf.el#preface-init-config-keywords][:preface, :init, :config keywords]]
-  - [[https://github.com/conao3/leaf.el#commands-keyword][:commands keyword]]
-  - [[https://github.com/conao3/leaf.el#after-keyword][:after keyword]]
-  - [[https://github.com/conao3/leaf.el#bind-bind-keywords][:bind, :bind* keywords]]
-- [[https://github.com/conao3/leaf.el#configure-variables-keywords][Configure variables keywords]]
-  - [[https://github.com/conao3/leaf.el#custom-custom-face-keywords][:custom, :custom-face keywords]]
-  - [[https://github.com/conao3/leaf.el#pre-setq-setq-setq-default-keywords][:pre-setq, :setq, :setq-default keywords]]
-- [[https://github.com/conao3/leaf.el#configure-list-keywords][Configure list keywords]]
-  - [[https://github.com/conao3/leaf.el#mode-interpreter-keywords][:mode, :interpreter keywords]]
-  - [[https://github.com/conao3/leaf.el#magic-magic-fallback-keywords][:magic, :magic-fallback keywords]]
-  - [[https://github.com/conao3/leaf.el#hook-keyword][:hook keyword]]
-  - [[https://github.com/conao3/leaf.el#load-path-keyword][:load-path keyword]]
-- [[https://github.com/conao3/leaf.el#condition-keywords][Condition keywords]]
-  - [[https://github.com/conao3/leaf.el#disabled-keyword][:disabled keyword]]
-  - [[https://github.com/conao3/leaf.el#if-when-unless-keywords][:if, :when, :unless keywords]]
-- [[https://github.com/conao3/leaf.el#byte-compile-keywords][Byte compile keywords]]
-  - [[https://github.com/conao3/leaf.el#defun-defvar-keywords][:defun, :defvar keywords]]
-- [[https://github.com/conao3/leaf.el#documentation-keywords][Documentation keywords]]
-  - [[https://github.com/conao3/leaf.el#doc-file-url-keywords][:doc, :file, :url keywords]]
-- [[https://github.com/conao3/leaf.el#misc-keywords][Misc keywords]]
+- [[#syntaxes][Syntaxes]]
+- [[#basic-keywords][Basic keywords]]
+  - [[#none-keyword][none (keyword)]]
+  - [[#require-keyword][:require keyword]]
+  - [[#ensure-package-keywords][:ensure, :package keywords]]
+  - [[#preface-init-config-keywords][:preface, :init, :config keywords]]
+  - [[#commands-keyword][:commands keyword]]
+  - [[#after-keyword][:after keyword]]
+  - [[#bind-bind-keywords][:bind, :bind* keywords]]
+- [[#configure-variables-keywords][Configure variables keywords]]
+  - [[#custom-custom-face-keywords][:custom, :custom-face keywords]]
+  - [[#pre-setq-setq-setq-default-keywords][:pre-setq, :setq, :setq-default keywords]]
+- [[#configure-list-keywords][Configure list keywords]]
+  - [[#mode-interpreter-keywords][:mode, :interpreter keywords]]
+  - [[#magic-magic-fallback-keywords][:magic, :magic-fallback keywords]]
+  - [[#hook-keyword][:hook keyword]]
+  - [[#load-path-keyword][:load-path keyword]]
+- [[#condition-keywords][Condition keywords]]
+  - [[#disabled-keyword][:disabled keyword]]
+  - [[#if-when-unless-keywords][:if, :when, :unless keywords]]
+- [[#byte-compile-keywords][Byte compile keywords]]
+  - [[#defun-defvar-keywords][:defun, :defvar keywords]]
+- [[#documentation-keywords][Documentation keywords]]
+  - [[#doc-file-url-keywords][:doc, :file, :url keywords]]
+- [[#misc-keywords][Misc keywords]]
   - [[#advice-advice-remove-keywords][:advice, :advice-remove keyword]]
-  - [[https://github.com/conao3/leaf.el#pl-pre-setq-pl-setq-pl-setq-default-pl-custom-keywords][:pl-pre-setq, :pl-setq, :pl-setq-default, :pl-custom keywords]]
+  - [[#pl-pre-setq-pl-setq-pl-setq-default-pl-custom-keywords][:pl-pre-setq, :pl-setq, :pl-setq-default, :pl-custom keywords]]
 - [[#system-keywords][System keywords]]
   - [[#leaf-protect-keyword][:leaf-protect keyword]]
   - [[#leaf-defer-keyword][:leaf-defer keyword]]
