update README, tagged v3.4.2

--- a/README.org
+++ b/README.org
@@ -1037,7 +1037,13 @@ It makes easy to jump definition.
        (prog1 'ace-jump-mode
          (autoload #'my-ace-jump-mode "ace-jump-mode" nil t)
          (add-hook 'cc-mode-hook #'my-ace-jump-mode)
-         (add-hook 'prog-mode-hook #'my-ace-jump-mode)))))
+         (add-hook 'prog-mode-hook #'my-ace-jump-mode)))
+
+      ;; lambda sexp is supported
+      ((leaf hook
+         :hook (foo-hook . (lambda () (foo))))
+       (prog1 'hook
+         (add-hook 'foo-hook #'(lambda nil (foo)))))))
 #+end_src
 
 ** :load-path keyword
