Add name to contributors.

--- a/README.org
+++ b/README.org
@@ -1936,6 +1936,7 @@ If you want to request explicitly use the ~:require t~ flag.
 - Kzflute ([[https://github.com/Kzflute][Kzflute]])
 - KeenS ([[https://github.com/KeenS][κeen]])
 - Dario Gjorgjevski ([[https://github.com/d125q][d125q]])
+- Masanori Mano ([[https://github.com/grugrut][grugrut]])
 
 ** Special Thanks
 Advice and comments given by [[http://emacs-jp.github.io/][Emacs-JP]]'s forum member has been a great help  in developing ~leaf.el~.
