--- a/README.org
+++ b/README.org
@@ -1837,6 +1837,11 @@ requires that work.
            ("C-c a [" . annotate-previous-anotation)))))))
 #+end_src
 
+** leaf-defvar
+When binding to a specific map with: bind, the map variable must be
+explicitly declared with: defvar. This keyword suppresses byte
+compiler warnings by automatically declaring the variable.
+
 * Information
 ** Donation
 I love OSS and I am dreaming of working on it as *full-time* job.
