define leaf-handler-auth and use it

--- a/README.org
+++ b/README.org
@@ -1617,11 +1617,7 @@ Before using those keywords, we recommended that you check how ~plstore~ works i
          (sql-connection-alist . some-plstore))
        (prog1 'sql
          (custom-set-variables
-          '(sql-connection-alist (plist-get
-                                  (cdr
-                                   (plstore-get some-plstore "leaf-sql"))
-                                  :sql-connection-alist)
-                                 "Customized in leaf `sql' from plstore `some-plstore'"))))
+          '(sql-connection-alist (leaf-handler-auth sql sql-connection-alist some-plstore) "Customized in leaf `sql' from plstore `some-plstore'"))))
 
       ;; Emulate customizing `erc-password' and `erc-nickserv-passwords'
       ;; with values taken from `some-plstore', and `erc-user-full-name'
@@ -1632,42 +1628,18 @@ Before using those keywords, we recommended that you check how ~plstore~ works i
          ((erc-user-full-name erc-nick) . another-plstore))
        (prog1 'erc
          (custom-set-variables
-          '(erc-password           (plist-get
-                                    (cdr
-                                     (plstore-get some-plstore "leaf-erc"))
-                                    :erc-password)
-                                   "Customized in leaf `erc' from plstore `some-plstore'")
-          '(erc-nickserv-passwords (plist-get
-                                    (cdr
-                                     (plstore-get some-plstore "leaf-erc"))
-                                    :erc-nickserv-passwords)
-                                   "Customized in leaf `erc' from plstore `some-plstore'")
-          '(erc-user-full-name     (plist-get
-                                    (cdr
-                                     (plstore-get another-plstore "leaf-erc"))
-                                    :erc-user-full-name)
-                                   "Customized in leaf `erc' from plstore `another-plstore'")
-          '(erc-nick               (plist-get
-                                    (cdr
-                                     (plstore-get another-plstore "leaf-erc"))
-                                    :erc-nick)
-                                   "Customized in leaf `erc' from plstore `another-plstore'"))))
+          '(erc-password           (leaf-handler-auth erc erc-password some-plstore) "Customized in leaf `erc' from plstore `some-plstore'")
+          '(erc-nickserv-passwords (leaf-handler-auth erc erc-nickserv-passwords some-plstore) "Customized in leaf `erc' from plstore `some-plstore'")
+          '(erc-user-full-name     (leaf-handler-auth erc erc-user-full-name another-plstore) "Customized in leaf `erc' from plstore `another-plstore'")
+          '(erc-nick               (leaf-handler-auth erc erc-nick another-plstore) "Customized in leaf `erc' from plstore `another-plstore'"))))
 
       ;; you can use symbol to configure with `leaf-default-plstore'.
       ((leaf erc
          :pl-custom erc-nick erc-password)
        (prog1 'erc
          (custom-set-variables
-          '(erc-nick     (plist-get
-                          (cdr
-                           (plstore-get leaf-default-plstore "leaf-erc"))
-                          :erc-nick)
-                         "Customized in leaf `erc' from plstore `leaf-default-plstore'")
-          '(erc-password (plist-get
-                          (cdr
-                           (plstore-get leaf-default-plstore "leaf-erc"))
-                          :erc-password)
-                         "Customized in leaf `erc' from plstore `leaf-default-plstore'"))))))
+          '(erc-nick     (leaf-handler-auth erc erc-nick leaf-default-plstore) "Customized in leaf `erc' from plstore `leaf-default-plstore'")
+          '(erc-password (leaf-handler-auth erc erc-password leaf-default-plstore) "Customized in leaf `erc' from plstore `leaf-default-plstore'"))))))
 
   (cort-deftest-with-macroexpand leaf/pl-setq
     '(
@@ -1676,10 +1648,20 @@ Before using those keywords, we recommended that you check how ~plstore~ works i
          :pl-setq
          (sql-connection-alist . some-plstore))
        (prog1 'sql
-         (setq sql-connection-alist (plist-get
-                                     (cdr
-                                      (plstore-get some-plstore "leaf-sql"))
-                                     :sql-connection-alist))))))
+         (setq sql-connection-alist
+               (leaf-handler-auth sql sql-connection-alist some-plstore))))
+      ;; Emulate setting `erc-password' and `erc-nickserv-passwords'
+      ;; with values taken from `some-plstore', and `erc-user-full-name'
+      ;; and `erc-nick' with values taken from `another-plstore'.
+      ((leaf erc
+         :pl-setq
+         ((erc-password erc-nickserv-passwords) . some-plstore)
+         ((erc-user-full-name erc-nick) . another-plstore))
+       (prog1 'erc
+         (setq erc-password           (leaf-handler-auth erc erc-password some-plstore))
+         (setq erc-nickserv-passwords (leaf-handler-auth erc erc-nickserv-passwords some-plstore))
+         (setq erc-user-full-name     (leaf-handler-auth erc erc-user-full-name another-plstore))
+         (setq erc-nick               (leaf-handler-auth erc erc-nick another-plstore))))))
 #+end_src
 
 * System keywords
