update readme, tagged v3.7.7

--- a/README.org
+++ b/README.org
@@ -538,7 +538,18 @@ You don't need to put ~progn~ because ~leaf~ can receive multiple S-expressions,
               '(eval-after-load 'leaf
                  '(progn
                     (require 'leaf-browser)
-                    (leaf-browser-init)))))))))
+                    (leaf-browser-init)))))))
+
+      ;; if specified t, assume leaf--name specified
+      ((leaf leaf-browser
+         :after t
+         :require t
+         :config (leaf-browser-init))
+       (prog1 'leaf-browser
+         (eval-after-load 'leaf-browser
+           '(progn
+              (require 'leaf-browser)
+              (leaf-browser-init)))))))
 #+end_src
 
 ** :bind, :bind* keywords
