update readme, tagged v3.7.8

--- a/README.org
+++ b/README.org
@@ -205,6 +205,7 @@ You declaratively tell the ~leaf~ to configure the package using special keyword
 - ~leaf-expand-{{keyword}}~: If nil, not to expand that keyword.
 - ~leaf-expand-minimally~: If nil, disable keywords that are not needed for debugging.
 - ~leaf-default-plstore~: default ~plstore~ stored variable
+- ~leaf-backend-ensure~: Select ~package~ or ~feather~ as ~:ensure~ backend.
 
 * Syntax
 All below examples are excerpts from [[https://github.com/conao3/leaf.el/blob/master/leaf-tests.el][leaf-tests.el]].
